# nrf52_radio

./: .gitignore
boards/arm/bt840xe_breakout/: Kconfig.board  Kconfig.defconfig  bt840xe_breakout-pinctrl.dtsi  bt840xe_breakout.dts  bt840xe_breakout.yaml  bt840xe_breakout_defconfig
boards/arm/ev_bt840/: Kconfig.board  Kconfig.defconfig  ev_bt840-pinctrl.dtsi  ev_bt840.dts  ev_bt840.yaml  ev_bt840_defconfig
boards/arm/test_board/: Kconfig.board  Kconfig.defconfig  test_board.dts  test_board.yaml  test_board_defconfig
common/: circular_buffer.h  leds.h  lite_pipe.h  radio.c  radio.h
radio_rx/: CMakeLists.txt  CMakePresets.json  Kconfig  ev_bt840.overlay  nrf52840dongle_nrf52840.overlay  prj.conf  sample.yaml
radio_rx/src/: main.c  rx_radio.c  rx_radio.h  rx_uart.c  rx_uart.h
radio_tx/: CMakeLists.txt  CMakePresets.json  Kconfig  ev_bt840.overlay  nrf52840dongle_nrf52840.overlay  pik_transmitter.conf  prj.conf  sample.yaml
radio_tx/src/: main.c  tx_radio.c  tx_radio.h  tx_uart.c  tx_uart.h
test/: saleae_test.py  serial_test.py
